1. Submenu color issue solved 2. TOoltip right alignment and bottom alignment issues solved

--- a/frontend/web/css/custom-style.scss
+++ b/frontend/web/css/custom-style.scss
@@ -1126,8 +1126,8 @@ input:focus-visible {
     right: 0;
 
     &::after {
-        left: initial;
-        right: 15px;
+        left: initial !important;
+        right: 15px !important;
     }
 }
 
